# autd3-simulator

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  ThirdPartyNotice.txt
.github/: dependabot.yml
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  release.yml
src/: error.rs  executor.rs  lib.rs  main.rs  simulator.rs  update_flag.rs
src/common/: camera.rs  color.rs  color_map.rs  mod.rs  transform.rs
src/emulator/: mod.rs  transducers.rs
src/event/: mod.rs  signal.rs
src/renderer/: depth_texture.rs  egui_renderer.rs  mod.rs
src/renderer/slice_renderer/: mod.rs  shader.wgsl
src/renderer/transducer_renderer/: mod.rs  shader.wgsl
src/server/: custom.rs  grpc.rs  mod.rs
src/state/: mod.rs
tools/license-checker/: Cargo.toml  workaround.toml
tools/license-checker/src/: main.rs
