[package]
name = "autd3-simulator"
version = "37.0.0-alpha.3"
edition = "2024"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]

license = "MIT"
description = "AUTD Simulator"
repository = "https://github.com/shinolab/autd3-simulator"
keywords = ["autd"]

[features]
default = []
use_meter = ["autd3-core/use_meter"]
left_handed = ["autd3-core/left_handed"]
unity = ["use_meter", "left_handed"]

[dependencies]
anyhow = { version = "1.0.100" }
autd3-core = { version = "37.0.0-alpha.3", default-features = false, features = ["time"] }
autd3-driver = { version = "37.0.0-alpha.3", default-features = false }
autd3-firmware-emulator = { version = "37.0.0-alpha.3", default-features = false }
autd3-link-simulator = { version = "37.0.0-alpha.3", default-features = false, features = [] }
bitflags = { version = "2.9.4", default-features = false }
bytemuck = { version = "1.24.0", default-features = false, features = ["derive"] }
camera_controllers = { version = "0.35.2", default-features = false }
clap = { version = "4.5.49", default-features = false, features = ["derive", "std", "usage", "wrap_help"] }
egui = { version = "0.33.0", default-features = false, features = ["default_fonts", "serde"] }
egui-wgpu = { version = "0.33.0", default-features = false, features = ["wayland", "winit"] }
egui-winit = { version = "0.33.0", default-features = false, features = ["wayland"] }
egui_plot = { version = "0.34.0", default-features = false }
glam = { version = "0.30.8", default-features = false, features = ["std", "bytemuck", "serde"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
parking_lot = { version = "0.12.5", default-features = false }
scarlet = { version = "1.2.0", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", default-features = false, features = ["io-util", "net", "rt-multi-thread", "macros"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt"] }
wgpu = { version = "27.0.1", default-features = false, features = ["dx12", "metal"] }
winit = { version = "0.30.12", default-features = false, features = ["rwh_06", "wayland"] }
