[package]
name = "license-checker"
version = "29.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
autd3-license-check = { path = "../autd3-license-check" }
cargo-license = "0.6.1"
cargo_metadata = "0.18.0"
