[package]
name = "license-checker"
version = "37.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cargo-about = "0.8.2"
itertools = "0.14.0"
krates = "0.20.0"
regex = "1.12.2"
reqwest = "0.12.24"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
spdx = "0.12.0"
toml = "0.9.8"
